# HotLoading

./: .gitignore  CMakeLists.txt  README.md  gen-metadata.py
mathlib/: color.h  math_helper.h  mathlib.h  matrix.h  quaternion.h  size.h  vector.h
src/: appdata.h  basic_types.h  basics.cpp  basics.h  dll.cpp  dll.h  entity.h  file_parser.cpp  file_parser.h  immediate_mode.cpp  immediate_mode.h  input_state.cpp  input_state.h  inspector.cpp  inspector.h  main.cpp  memory_pool.h  mesh.cpp  mesh.h  object.h  resource.cpp  resource.h  resource_pool.cpp  resource_pool.h  shader.cpp  shader.h  store.cpp  store.h  texture.cpp  texture.h  timer.cpp  timer.h  variant_type.h
